terraform/caching-server/main.tf
provider "aws" {
    region = "ap-southeast-2"
}
# ref at the end is simple commit hash ie "git log" commit hash
module "nixos_image" {
    source  = "git::https://github.com/bernokl/terraform-nixos.git//aws_image_nixos?ref=c8746e7a74f6e9c2c66c3492098c576758e987e8"
    release = "22.11"
}

resource "aws_security_group" "ssh_and_egress" {
    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = [ "xx.xx.xx.xx/32" ]
    }
    ingress {
        from_port   = 8080
        to_port     = 8080
        protocol    = "tcp"
        cidr_blocks = [ "xx.xx.xx.xx/32" ]
    }


    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }
}

resource "tls_private_key" "state_ssh_key" {
    algorithm = "RSA"
}

resource "local_sensitive_file" "machine_ssh_key" {
    content = tls_private_key.state_ssh_key.private_key_pem
    filename          = "${path.module}/id_rsa.pem"
    file_permission   = "0600"
}

resource "aws_key_pair" "generated_key" {
    key_name   = "generated-key-${sha256(tls_private_key.state_ssh_key.public_key_openssh)}"
    public_key = tls_private_key.state_ssh_key.public_key_openssh
}

resource "aws_instance" "machine" {
    ami             = module.nixos_image.ami
    instance_type   = "t2.medium"
    security_groups = [ aws_security_group.ssh_and_egress.name ]
    key_name        = aws_key_pair.generated_key.key_name

    root_block_device {
        volume_size = 50 # GiB
    }
    user_data = <<-EOL
#!env bash -xe
nix run github:bernokl/nix-ops --no-write-lock-file &>/tmp/outNix
EOL
}

output "public_dns" {
    value = aws_instance.machine.public_dns
}

module "deploy_nixos" {
    source = "git::https://github.com/bernokl/terraform-nixos.git//deploy_nixos?ref=5f5a0408b299874d6a29d1271e9bffeee4c9ca71"
    nixos_config = "${path.module}/configuration.nix"
    target_host = aws_instance.machine.public_ip
    ssh_private_key_file = local_sensitive_file.machine_ssh_key.filename
    ssh_agent = false
}
